# Reins

./: .coverage  .gitignore  .gitlab-ci.yml.example  Jenkinsfile.example  README.md  README.zh-CN.md  pyproject.toml  pytest.ini  task_plan.md
docker/: Dockerfile.pipeline  docker-compose.yml
docs/: PHASE3-COMPLETE.md  PHASE4-CLI-COMMANDS.md  PHASE5-INTEGRATION-TESTS.md  PHASE6-SUPERIORITY-FEATURES.md  ROADMAP-DETAILED.md  phase-1-completion-report.md  spec-schema.md  trellis-integration-roadmap.md
docs/plans/: 2026-04-17-context-injection-design.md  2026-04-17-reins-v2-integration.md  2026-04-17-task-management-design.md  2026-04-17-worktree-parallelism-design.md
examples/workflows/: code-review.yaml  docs-generation.yaml  (+2 more)
scripts/: README.md  _reins_script_support.py  run_batch.py  run_pipeline.py
tests/: conftest.py  test_api_multiprocess.py  test_approval_and_mcp.py  test_checklist.py  test_cold_start.py  test_context.py  test_event_builder.py  test_execution_boundary.py  test_execution_dispatcher.py  test_fs_containment.py  test_grant_expiration.py  test_grant_lifecycle.py  test_hydration_drift.py  test_integration.py  test_journal.py  test_journal_modes.py  test_mcp_adapter.py  test_mcp_integration.py  test_mcp_lifecycle.py  test_mcp_negotiation.py  test_mcp_session_integration.py  test_mcp_transport.py  test_orchestrator.py  test_reducer.py  test_skill_activation.py  test_skill_discovery.py  test_skill_trust.py  test_spec_evaluator.py  test_spec_events.py  test_spec_projection.py  test_spec_registrar.py  test_subagent.py  test_timeline.py  test_workflow.py
(+305 files in other folders)
