[project]
name = "reins"
version = "0.1.0"
description = "Event-sourced agent control kernel"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "aiofiles>=23.0",
    "aiohttp>=3.9",
    "structlog>=24.0",
    "ulid-py>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
